Label filters: fix issues with long labels
* labels in label filters now have a maximum width to prevent running
  out of screen
* labels exceeding this width are cut off with an ellipsis ("...") and
  the full label is shown in a tooltip on hover

CMK-16295

--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -1058,6 +1058,13 @@ table.modifydowntimes > tbody > tr {
   border: none;
 }
 
+@mixin ellipsis-text-overflow {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .select2-container--default {
   .select2-results {
     color: $font-color-black;
@@ -1084,6 +1091,7 @@ table.modifydowntimes > tbody > tr {
   .select2-results__option {
     color: $font-color;
     background-color: $input-background-color;
+    @include ellipsis-text-overflow;
   }
 
   .select2-results__option[aria-selected="true"] {
@@ -1292,13 +1300,6 @@ div.foldable div.success {
 
 input.hidden_submit {
   display: none;
-}
-
-@mixin ellipsis-text-overflow {
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .underline {
